# mcopy

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CROSS_PLATFORM.md  Cargo.toml  LICENSE  MODULARIZATION.md  OPTIMIZATIONS.md  README.md  build.rs  logo.icns  mcopy.rc
.github/workflows/: release.yml
scripts/: bundle-macos.sh  changelog.sh  make-icns.sh  release.sh
src/: clipboard.rs  context_menu.rs  lib.rs  main.rs  ui.rs
src/cli/: commands.rs  mod.rs
src/clipboard/: mod.rs  session.rs
src/copy/: controller.rs  mod.rs  progress.rs  walk.rs
src/platform/: linux.rs  macos.rs  mod.rs  state.rs  windows.rs
src/ui/: assets.rs  constants.rs  install.rs  mod.rs  progress.rs  theme.rs  widgets.rs  window.rs
src/ui/install/: mod.rs  state.rs
src/ui/progress/: mod.rs  state.rs
src/util/: path.rs
